# face_embedding

./: README.md  pyproject.toml  requirements.txt  requirments.txt
src/face_embedding/: image_handler.py
src/face_embedding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/processor/: .gitignore  face_image_processor.py  face_image_structures.py
