[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "face_embedding"
version = "0.0.1"
authors = [
  { name="Mohammed Nadershah", email="mohammed.a.nadershah@gmail.com" },
]
description = "Simple Wrapper for Python DeepFace package."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Moahmmed1900/face_embedding"